# fdc

./: Cargo.toml  README.md
fdc-client-api/: Cargo.toml
fdc-client-api/src/: lib.rs
fdc-core/: Cargo.toml
fdc-core/src/: lib.rs
fdc-core/src/crypto/: encrypt.rs  keys.rs  macros.rs  mod.rs  shares.rs  signatures.rs
fdc-core/src/model/: mod.rs  records.rs
fdc-server-api/: Cargo.toml
