[package]
name = "fdc-core"
version = "0.1.0"
authors = ["shumy <micaelpedrosa@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
curve25519-dalek = { version = "1", features = ["serde"] }

digest = "0.8.1"
sha2 = "0.8"
base64 = "0.11"
bincode = "1.1"
rand = "0.7"
clear_on_drop = "0.2"